bobcat (5.00.02)

  * Fixed an error in SyslogBuf's constructor: it now correctly defines the 
    logged message head as SyslogBuf's first argument.

  * LogBuf's member `active' now (de)activates logging until another `active'
    call. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 03 Jun 2019 16:35:26 +0200

bobcat (5.00.01)

  * Changed overlooked references to ...bobcat4 into ...bobcat5

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 01 May 2019 20:38:19 +0200

bobcat (5.00.00)

  * All classes derived from std::streambuf are now called ...Buf:
        Base64StreambufBase         -> Base64BufBase
        IBase64Streambuf            -> IBase64Buf
        IFdStreambuf                -> IFdBuf
        IFilterStreambuf            -> IFilterBuf
        IOStreambuf                 -> IOBuf
        IQuotedPrintableStreambuf   -> IQuotedPrintableBuf
        LogBuffer                   -> LogBuf
        MultiStreambuf              -> MultiBuf
        OFdStreambuf                -> OFdBuf
        OFilterStreambuf            -> OFilterBuf
        OFoldStreambuf              -> OFoldBuf
        OHexStreambuf               -> OHexBuf
        QPStreambufBase             -> QPBufBase
        Randbuffer                  -> RandBuf
        SharedStreambuf             -> SharedBuf
        Syslogbuf                   -> SyslogBuf

  * New members replacing old ones:
        - in all classes previously offering a pSync member:
            - pSync() is replaced by sync()

  * ConfigFile:
        - removed deprecated members:
            beginRE(std::string const &re);
            endRE() const;
        - fixed a (potentially occurring) segfault in ConfigFile

  * CSV: removed, use CSV4180 instead.

  * DateTime:
      - The TriVal type is not used anymore. Instead, `true' (DST is used for
            the object's time) and `false' (DST is not used) are used.
      - DateTime(int zoneMinutes) is replaced by
            DateTime(std::chrono::minutes zoneMinutes) 
